Changelog
=========

1.9.2 (unreleased)

- The sfbc client is now a method rather than a property. See Products.saleforcebaseconnector
  v 1.5.
  [smcmahon]

- Install the base connector tool automatically.
  [rpatterson]

- During prepopulation, convert Salesforce numbers that are integers into
  Python ints.
  [davisagli]

1.9.1 (2012-02-01)

- If there's a field named ``credit_card``, don't include it in the fallback
  email.
  [davisagli]

1.9.0 (2012-1-27)

- Avoid caching Salesforce field info on the adapter instance. Instead, use
  the type description cache of the beatbox client (which can be purged via
  the Salesforce base connector in the ZMI).
  [davisagli]

- Include the exception message in the fallback e-mail.
  [davisagli]

- Add a view and action to FormFolders which summarizes the configuration of
  all Salesforce adapters.
  [jessesnyder]

1.9.0b1 (2010-12-23)

- Add fallback logic for when the adapter cannot write to Salesforce. In this
  case it will first try saving to an enabled savedata adapter, if present.
  Next it will try saving to a disabled savedata adapter, if present. Finally
  it will try sending an e-mail to the site's admin e-mail address. An e-mail
  is sent in all 3 cases to alert the administrator that writing to Salesforce
  failed. If one of the fallbacks succeeds, the user filling out the form will
  see the normal thank you page instead of an error.
  [davisagli]

1.8.0 (2010-12-01)

- Add a new option for what to do in update mode if no object is found:
  "Silently skip this and any subsequent Salesforce adapters"
  [davisagli]

1.7.0 (2010-11-16)

- Obtain an Id from adapters in update mode even if they don't have any fields
  mapped, so that that Id can be used from a chained adapter. This makes it
  possible to create objects with a lookup field to an existing object that
  is found by an arbitrary SOQL expression, rather than simply by its Id.
  [davisagli]

1.6.4 (2010-08-27)
